<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background">

    <!-- Container for Text Components with Opaque Background -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="100dp"
        android:background="#CCFFFFFF" ><!-- Semi-opaque white -->

        <!-- Recipe Title -->
        <TextView
            android:id="@+id/recipeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/alata"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:layout_marginTop="10dp"/>

        <!-- Step Title -->
        <TextView
            android:id="@+id/stepTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_x_of_y"
            android:textSize="18sp"
            android:fontFamily="@font/alata"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/recipeTitle"/>

        <!-- Scrollable part where user can scroll through step info-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@id/stepTitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Step Description -->
                <TextView
                    android:id="@+id/stepDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step_description_here"
                    android:textSize="20sp"
                    android:fontFamily="@font/alata"
                    android:paddingBottom="16dp" />

                <!-- Step Ingredients -->
                <TextView
                    android:id="@+id/stepIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:textSize="18sp"
                    android:fontFamily="@font/alata"
                    android:paddingBottom="8dp" />

                <!-- Estimated Time -->
                <TextView
                    android:id="@+id/stepTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estimated_time"
                    android:textSize="16sp"
                    android:fontFamily="@font/alata"
                    android:paddingBottom="16dp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

        <!-- Navigation Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_gravity="bottom">

            <Button
                android:id="@+id/prevButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous"
                android:fontFamily="@font/alata"
                android:textColor="@android:color/white"
                android:background="@drawable/background_button"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/next"
                android:fontFamily="@font/alata"
                android:textColor="@android:color/white"
                android:background="@drawable/background_button"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/returnHomeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/return_to_home"
                android:visibility="gone"
                android:fontFamily="@font/alata"
                android:textColor="@android:color/white"
                android:background="@drawable/background_button"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>
</LinearLayout>
